add NATS microservice integration and update environment configuration; refactor payment session handling

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
 
 # https://dashboard.stripe.com/test/webhooks/we_1QzH8ADLiK6DQt9NI6uaFyz4 - WEB HOOK SIGN IN SECRET
 STRIPE_ENDPOINT_SECRET=
+
+NATS_SERVERS="nats://localhost:4222"
